fix scrollbar glitch

--- a/adabingw/src/index.css
+++ b/adabingw/src/index.css
@@ -1,3 +1,7 @@
+:root {
+  --fall-distance: 2000px;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
